--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>Conference Code of Conduct</title>
+<title>Community Code of Conduct</title>
 <style>
 * {
   font-family: 'helvetica neue', arial, helvetica;
@@ -63,19 +63,19 @@ em {
 </style>
 </head>
 <body>
-<h1>Conference Code of Conduct</h1>
+<h1>Community Code of Conduct</h1>
 
-<p>All attendees, speakers, sponsors and volunteers at our conference are required to agree with the following code of conduct. Organisers will enforce this code throughout the event. We are expecting cooperation from all participants to help ensuring a safe environment for everybody.</p>
+<p>All members are required to agree with the following code of conduct. All members of the community are expected to enforce this code at every event, with help from the organisers. We are expecting cooperation from all participants in the community to help ensuring a safe environment for everybody.</p>
 
 <p><em>tl;dr: Don’t be a Jerk</em></p>
 
 <h2>Need Help?</h2>
 
-<p>You have our contact details in the emails we&#39;ve sent.</p>
+<p>The contact details of the organisers are on our website and in any emails we have sent.</p>
 
 <h2>The Quick Version</h2>
 
-<p>Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, age, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference <em>without a refund</em> at the discretion of the conference organisers.</p>
+<p>Our community is dedicated to providing a harassment-free experience for everyone, regardless of gender, age, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of community members in any form. Sexual language and imagery is not appropriate for any community event, including talks, workshops, parties, or on Twitter and other online media. Participants violating these rules may be sanctioned or expelled from the event and any future events <em>without a refund</em> (if applicable), or from the community itself, at the discretion of the organisers.</p>
 
 <h2>The Less Quick Version</h2>
 
@@ -83,20 +83,20 @@ em {
 
 <p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
 
-<p>Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualised clothing/uniforms/costumes, or otherwise create a sexualised environment.</p>
+<p>Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Event hosts and attendees, including sponsors, staff and volunteers, should not use sexualised clothing/uniforms/costumes, or otherwise create a sexualised environment.</p>
 
-<p>If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.</p>
+<p>If a participant engages in harassing behavior, the organisers may take any action they deem appropriate, including warning the offender or expulsion from the event or community with no refund.</p>
 
-<p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they&#39;ll be wearing branded t-shirts.</p>
+<p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact an organiser immediately. All of our organisers' contact details are listed on our website.</p>
 
-<p>Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
+<p>Organisers will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the event. We value your attendance and contributions to the community.</p>
 
-<p>We expect participants to follow these rules at conference and workshop venues and conference-related social events.</p>
+<p>We expect participants to follow these rules at all community events, whether professional, social or a mix of both.</p>
 
 <div class="footer">
-<p><small><em>Original source and credit: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a> &amp; <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">The Ada Initiative</a><br>
+    <p><small><em>Original source and credit: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a>, <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">The Ada Initiative</a> &amp; <a href="http://confcodeofconduct.com/">confcodeofconduct.com</a><br>
 
-Please help by translating or improving: <a href="https://github.com/leftlogic/confcodeofconduct.com">http://github.com/leftlogic/confcodeofconduct.com</a><br>
+Please help by translating or improving: <a href="https://github.com/SamirTalwar/communitycodeofconduct.com">https://github.com/SamirTalwar/communitycodeofconduct.com</a><br>
 
 This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a></em></small>
 
