updated after review

--- a/index-it.html
+++ b/index-it.html
@@ -65,14 +65,14 @@ em {
 <body>
 <h1>Codice di Comportamento per Comunità</h1>
 
-<p>A tutti i membri viene richiesto di aderire al seguente codice di condotta. Ci si aspetta che tutti i membri della comunità faranno rispettare questo codice in ogni evento, con l'aiuto degli organizzatori. Ci aspettiamo cooperazione da parte di tutti i partecipanti della comunità nell'aiutare a garantire un ambiente sicuro per tutti.</p>
+<p>A tutti i membri viene richiesto di aderire al seguente codice di condotta. Ci si aspetta che tutti i membri della comunità facciano rispettare questo codice in ogni evento, con l'aiuto degli organizzatori. Ci aspettiamo cooperazione da parte di tutti i partecipanti della comunità nell'aiutare a garantire un ambiente sicuro per tutti.</p>
 <h2>Hai bisogno di aiuto?</h2>
 
-<p>I nostri contatti sono nel nostro sito web e nella email che abbiamo inviato.</p>
+<p>I nostri contatti sono disponibili sul nostro sito web e in tutte le email inviate.</p>
 
 <h2>Versione Breve</h2>
 
-<p>La nostra comunità è pensata per fornire un'esperienza libera da molestie per chiunque, indipendentemente da genere, età, identità ed espressione sessuale, orientamento sessuale, disabilità, aspetto fisico, corporatura, razza, etnia, religione (o la sua assenza), o scelta tecnologica. Non tolleriamo molestie ai membri della comunità in nessuna forma. Linguaggi e immagini a sfondo sessuale non sono appropriati in nessun evento della comunità, inclusi talk, workshop, party, Twitter e altri mezzi online. I partecipanti che trasgrediscano queste regole possono venire sanzionati o espulsi dall'evento e altri eventi futuri <em>senza rimborso</em> (se applicabile), o dalla comunità stessa, a discrezione degli organizzatori.</p>
+<p>La nostra comunità è pensata per fornire un'esperienza libera da molestie per chiunque, indipendentemente da genere, età, identità ed espressione sessuale, orientamento sessuale, disabilità, aspetto fisico, corporatura, razza, etnia, religione (o la sua assenza) o preferenza tecnologica. Non tolleriamo molestie ai membri della comunità in nessuna forma. Linguaggi e immagini a sfondo sessuale non sono appropriati in nessun evento della comunità, inclusi presentazioni, workshop, feste, Twitter e altri mezzi online. I partecipanti che trasgrediscano queste regole possono venire sanzionati o espulsi dall'evento e altri eventi futuri senza rimborso (se applicabile) o dalla comunità stessa, a discrezione degli organizzatori.</p>
 
 <h2>Versione Meno Breve</h2>
 
@@ -82,11 +82,11 @@ em {
 
 <p>Anche gli sponsor sono tenuti a rispettare questa politica anti-molestie. In particolare, gli sponsor non dovrebbero usare immagini, attività, o qualsiasi altro materiale a sfondo sessuale. Partecipanti e ospiti, inclusi gli sponsor, staff e volontari, non dovrebbero usare abbigliamento/divise/costumi con espliciti riferimenti sessuali, o comunque creare un ambiente sessualizzato.</p>
 
-<p>Se un partecipante intraprende un comportamento molesto, gli organizzatori possono prendere i provvedimenti che ritengono più appropriati, inclusi avvertimenti al responsabile dell'azione o la sua espulsione dall'evento o dalla comunità senza rimborso.</p>
+<p>Se un partecipante intraprende un comportamento molesto, gli organizzatori possono prendere i provvedimenti che ritengono più appropriati, inclusi avvertimenti al responsabile dell'azione o la sua espulsione senza rimborso dall'evento o dalla comunità.</p>
 
 <p>Se vieni molestato, noti che qualcun altro viene molestato, o hai altre preoccupazioni, per favore contatta un organizzatore immediatamente. Tutti i contatti dei nostri organizztori sono presenti nel nostro sito web.</p>
 
-<p>Gli organizzatori saranno felici di aiutare i partecipanti a contattare la sicurezza della sede o le forze dell'ordine locali, accompagnare, o comunque aiutare chi subisce molestie a sentirsi sicuri per tutta la durata dell'evento. Rispettiamo la vostra presenza e i vostri contributi alla communità.</p>
+<p>Gli organizzatori saranno felici di aiutare i partecipanti a contattare il servizio di sicurezza della sede o le forze dell'ordine locali, accompagnare o comunque aiutare chi subisce molestie a sentirsi sicuri per tutta la durata dell'evento. Apprezziamo la vostra presenza e i vostri contributi alla communità.</p>
 
 <p>Ci aspettiamo che i partecipanti seguano queste regole in tutti gli eventi della comunità, che siano essi professionali, sociali o un insieme dei due.</p>
 
