--- a/index-it.html
+++ b/index-it.html
@@ -65,7 +65,7 @@ em {
 <body>
 <h1>Codice di Comportamento per Comunità</h1>
 
-<p>A tutti i membri viene richiesto di aderire al seguente codice di condotta. Ci si aspetta che tutti i membri della comunità facciano rispettare questo codice in ogni evento, con l'aiuto degli organizzatori. Ci aspettiamo cooperazione da parte di tutti i partecipanti della comunità nell'aiutare a garantire un ambiente sicuro per tutti.</p>
+<p>A tutti i membri viene richiesto di aderire al seguente codice di condotta. Ci si aspetta che tutti i membri della comunità con l'aiuto degli organizzatori facciano rispettare questo codice in ogni evento. Ci aspettiamo cooperazione da parte di tutti i partecipanti della comunità nell'aiutare a garantire un ambiente sicuro per tutti.</p>
 <h2>Hai bisogno di aiuto?</h2>
 
 <p>I nostri contatti sono disponibili sul nostro sito web e in tutte le email inviate.</p>
@@ -82,9 +82,9 @@ em {
 
 <p>Anche gli sponsor sono tenuti a rispettare questa politica anti-molestie. In particolare, gli sponsor non dovrebbero usare immagini, attività, o qualsiasi altro materiale a sfondo sessuale. Partecipanti e ospiti, inclusi gli sponsor, staff e volontari, non dovrebbero usare abbigliamento/divise/costumi con espliciti riferimenti sessuali, o comunque creare un ambiente sessualizzato.</p>
 
-<p>Se un partecipante intraprende un comportamento molesto, gli organizzatori possono prendere i provvedimenti che ritengono più appropriati, inclusi avvertimenti al responsabile dell'azione o la sua espulsione senza rimborso dall'evento o dalla comunità.</p>
+<p>Se un partecipante intraprende un comportamento molesto, gli organizzatori possono prendere i provvedimenti che ritengono più appropriati, inclusi avvertimenti al diretto responsabile o la sua espulsione senza rimborso dall'evento o dalla comunità.</p>
 
-<p>Se vieni molestato, noti che qualcun altro viene molestato, o hai altre preoccupazioni, per favore contatta un organizzatore immediatamente. Tutti i contatti dei nostri organizztori sono presenti nel nostro sito web.</p>
+<p>Se vieni molestato, noti che qualcun altro viene molestato, o hai altre preoccupazioni, per favore contatta un organizzatore immediatamente. Tutti i contatti dei nostri organizzatori sono presenti nel nostro sito web.</p>
 
 <p>Gli organizzatori saranno felici di aiutare i partecipanti a contattare il servizio di sicurezza della sede o le forze dell'ordine locali, accompagnare o comunque aiutare chi subisce molestie a sentirsi sicuri per tutta la durata dell'evento. Apprezziamo la vostra presenza e i vostri contributi alla communità.</p>
 
