Fixed more typos

--- a/index-de.html
+++ b/index-de.html
@@ -6,7 +6,7 @@ um einen sicheren und angenehmen Ort für alle zu ermöglichen.</p>
 
 <h2>Brauchst du Hilfe?</h2>
 
-<p>Die Kontaktmöglichkeiten zu den Organisierenden sind auf unserer Webseite und in allen Emails, 
+<p>Die Kontaktmöglichkeiten zu den Organisierenden sind auf unserer Webseite und in allen E-Mails, 
 die wir versenden, zu finden.</p>
 
 <h2>Die Kurzfassung</h2>
@@ -28,7 +28,7 @@ bevorzugten Technologien, sexualisierende Darstellungen in öffentlichen Räumen
 Verfolgung, unerwünschtes Fotografieren oder Aufnehmen, wiederholte Störung von Vorträgen und anderen Veranstaltungen, 
 unerwünschten körperlichen Kontakt und unerwünschte sexuelle Aufmerksamkeit.</p>
 
-<p>Wir erwarten, dass Teilnehmende, die gebeten werden jedwedes belästigende Verhalten zu beenden, dem sofort nachkommen.</p>
+<p>Wir erwarten, dass Teilnehmende, die gebeten werden jedwedes belästigendes Verhalten zu beenden, dem sofort nachkommen.</p>
 
 <p>Diese Verhaltensregeln gelten auch für Sponsor_innen. Insbesondere sollten Sponsor_innen darauf achten, dass sie 
 keine sexualisierenden Bilder, Aktivitäten oder andere sexualisierende Werbemittel einsetzen. Teilnehmende an 
