fixed inconsistent wording

--- a/index-de.html
+++ b/index-de.html
@@ -31,8 +31,8 @@ unerwünschten körperlichen Kontakt und unerwünschte sexuelle Aufmerksamkeit.<
 <p>Wir erwarten, dass Teilnehmende, die gebeten werden jedwedes belästigendes Verhalten zu beenden, dem sofort nachkommen.</p>
 
 <p>Diese Verhaltensregeln gelten auch für Sponsor_innen. Insbesondere sollten Sponsor_innen darauf achten, dass sie 
-keine sexualisierenden Bilder, Aktivitäten oder andere sexualisierende Werbemittel einsetzen. Teilnehmende an 
-Veranstaltungen und Gastgebende, inklusive Sponsor_innen, Standpersonal und Freiwillige sollten keine sexualisierende 
+keine sexualisierte Bilder, Aktivitäten oder andere sexualisierte Werbemittel einsetzen. Teilnehmende an 
+Veranstaltungen und Gastgebende, inklusive Sponsor_innen, Standpersonal und Freiwillige sollten keine sexualisierte 
 Kleidung, Uniformen oder Kostüme tragen, oder sonstwie ein sexualisiertes Umfeld gestalten.</p>
 
 <p>Sollten Teilnehmende durch belästigendes Verhalten auffallen, steht es den Organisierenden frei, jede von ihnen als 
