FIxed order of words in first sentence & typo

--- a/index-de.html
+++ b/index-de.html
@@ -1,8 +1,8 @@
 <h1>Verhaltensregeln in der Community</h1>
 <p>Alle Mitglieder dieser Community sind aufgefordert, sich an folgende Verhaltensregeln zu halten. 
-Von allen Mitgliedern dieser Community wird erwartet, dass sie diese Regeln bei jeder Veranstaltung, 
-mit der Hilfe der Organisierenden, durchsetzen. Wir erwarten die Mitarbeit aller Teilnehmenden der Community, 
-um einen sicheren und angenehmen Ort für alle zu ermöglichen.</p>
+Von allen Mitgliedern dieser Community wird erwartet, dass sie diese Regeln gemeinsam mit den Organisierenden bei jeder
+Veranstaltung durchsetzen.
+Wir erwarten die Mitarbeit aller Teilnehmenden der Community, um einen sicheren und angenehmen Ort für alle zu ermöglichen.</p>
 
 <h2>Brauchst du Hilfe?</h2>
 
@@ -39,7 +39,7 @@ Kleidung, Uniformen oder Kostüme tragen, oder sonstwie ein sexualisiertes Umfel
 angemessen betrachtete Maßnahmen zu ergreifen. Dies schließt Ermahnungen bis hin zum Verweis von der Veranstaltung oder 
 der Community (ohne Anspruch auf Rückerstattung des Eintrittspreises) ein.</p>
 
-<p>Solltest du dich belästigt fühlen oder mitbekommen, dass jemand anders belästigt wird oder wenn du jedwede andere 
+<p>Solltest du dich belästigt fühlen oder mitbekommen, dass jemand anderes belästigt wird oder wenn du jedwede andere 
 Bedenken hast, wende dich bitte sofort an eine(n) der Organsierenden. Alle Organisierenden sind auf unserer Webseite 
 aufgelistet.</p>
 
