--- a/index-de.html
+++ b/index-de.html
@@ -16,8 +16,8 @@ Religionszugehörigkeit (oder Nichtvorhandensein einer solchen) oder ihrer bevor
 Wir tolerieren keinerlei Belästigung von Mitgliedern der Community in jedweder Form. Sexualisierte Sprache und 
 Darstellungen sind bei keiner Communityveranstaltung angemessen. Dies umfasst auch Vorträge, Workshops und Partys, 
 sowie Twitter und andere Onlinemedien. Teilnehmende, die gegen diese Regeln verstoßen, müssen mit Sanktionen durch 
-die Organisierenden rechnen. Je nach deren Ermessen kann dies einen Verweises von der Veranstaltung, jedweder 
-zukunftigen Veranstaltungen <em>ohne Anspruch auf Rückerstattung des Eintrittspreises</em> (falls vorhanden), 
+die Organisierenden rechnen. Je nach deren Ermessen kann dies einen Verweises von der Veranstaltung, aller 
+zukünftigen Veranstaltungen <em>ohne Anspruch auf Rückerstattung des Eintrittspreises</em> (falls vorhanden), 
 oder aus der Community selbst beinhalten.</p>
 
 <h2>Die längere Fassung</h2>
