restructured weird sentence

--- a/index-de.html
+++ b/index-de.html
@@ -17,8 +17,9 @@ Wir tolerieren keinerlei Belästigung von Mitgliedern der Community in jedweder 
 Darstellungen sind bei keiner Communityveranstaltung angemessen. Dies umfasst auch Vorträge, Workshops und Partys, 
 sowie Twitter und andere Onlinemedien. Teilnehmende, die gegen diese Regeln verstoßen, müssen mit Sanktionen durch 
 die Organisierenden rechnen. Je nach deren Ermessen kann dies einen Verweises von der Veranstaltung, aller 
-zukünftigen Veranstaltungen <em>ohne Anspruch auf Rückerstattung des Eintrittspreises</em> (falls vorhanden), 
-oder aus der Community selbst beinhalten.</p>
+zukünftigen Veranstaltungen oder aus der Community selbst beinhalten, <em>ohne Anspruch auf Rückerstattung 
+eines eventuell vorhandenen Eintrittspreises</em>.
+</p>
 
 <h2>Die längere Fassung</h2>
 
