--- a/index-de.html
+++ b/index-de.html
@@ -99,7 +99,7 @@ unerwünschten körperlichen Kontakt und unerwünschte sexuelle Aufmerksamkeit.<
 <p>Diese Verhaltensregeln gelten auch für Sponsor_innen. Insbesondere sollten Sponsor_innen darauf achten, dass sie 
 keine sexualisierte Bilder, Aktivitäten oder andere sexualisierte Werbemittel einsetzen. Teilnehmende an 
 Veranstaltungen und Gastgebende, inklusive Sponsor_innen, Standpersonal und Freiwillige sollten keine sexualisierte 
-Kleidung, Uniformen oder Kostüme tragen, oder sonstwie ein sexualisiertes Umfeld gestalten.</p>
+Kleidung, Uniformen oder Kostüme tragen, oder in anderer Weise ein sexualisiertes Umfeld gestalten.</p>
 
 <p>Sollten Teilnehmende durch belästigendes Verhalten auffallen, steht es den Organisierenden frei, jede von ihnen als 
 angemessen betrachtete Maßnahmen zu ergreifen. Dies schließt Ermahnungen bis hin zum Verweis von der Veranstaltung oder 
@@ -114,7 +114,7 @@ Darüber hinaus können wir Begleitungen vermitteln und auch weitere Maßnahmen 
 angenehmen Besuch der Konferenz zu ermöglichen. Wir schätzen deine Anwesenheit und deinen Beitrag zur Community.</p>
 
 <p>Wir erwarten von allen Teilnehmenden die Einhaltung dieser Regeln auf allen Veranstaltungen der Community, ob beruflich, 
-gesellig oder gemischt.</p>
+gesellig oder beidem.</p>
 
 
 <div class="footer">
