--- a/index-de.html
+++ b/index-de.html
@@ -106,7 +106,7 @@ angemessen betrachtete Maßnahmen zu ergreifen. Dies schließt Ermahnungen bis h
 der Community (ohne Anspruch auf Rückerstattung des Eintrittspreises) ein.</p>
 
 <p>Solltest du dich belästigt fühlen oder mitbekommen, dass jemand anderes belästigt wird oder wenn du jedwede andere 
-Bedenken hast, wende dich bitte sofort an eine(n) der Organsierenden. Alle Organisierenden sind auf unserer Webseite 
+Bedenken hast, wende dich bitte sofort an eine(n) der Organisierenden. Alle Organisierenden sind auf unserer Webseite 
 aufgelistet.</p>
 
 <p>Organisierende helfen gerne dabei das Security-Personal des Veranstaltungsorts und/oder die Behörden zu kontaktieren. 
