--- a/index-tr.html
+++ b/index-tr.html
@@ -73,7 +73,7 @@ em {
 
 <h2>Kısa Versiyon</h2>
 
-<p>Topluluğumuz  cinsiyet, cinsel kimlik, cinsel tercih, yaş, engellilik hali, fiziksel görünüm, vücut ölçüleri, ırk ve din (veya dinsizlik), teknolojik tercihler ayrımı yapmaksızın herkese rahatsızlıktan uzak bir deneyim sunmaya adanmıştır. Konferans katılımcılarına herhangi bir biçimde rahatsızlık verilmesine müsamaha göstermiyoruz. Cinsel dil ve görüntüler konuşmalarda, atölyelerde, partilerde, Twitter ve diğer sanal medyada kullanılmamalıdır. Bu kuralları ihlal eden katılımcılara organizatörler uygun gördükleri durumlarda yaptırım uygulayabilirler veya bu katılımcıları <em>para iadesi olmadan</em> (eğer ücretli bir etkinlik  ise), mevcut ve yapılacak etkinliklerden ya da topluluğun kendisinden   uzaklaştırılabilirler.</p>
+<p>Topluluğumuz  cinsiyet, cinsel kimlik, cinsel tercih, yaş, engellilik hali, fiziksel görünüm, vücut ölçüleri, ırk ve din (veya dinsizlik), teknolojik tercihler ayrımı yapmaksızın herkese rahatsızlıktan uzak bir deneyim sunmaya adanmıştır. Konferans katılımcılarına herhangi bir biçimde rahatsızlık verilmesine müsamaha göstermiyoruz. Cinsel içerikli konuşma ve görüntüler konuşmalar, atölyeler, partiler, Twitter ve diğer sanal medya da dahil olmak üzere herhangi bir topluluk etkinliğinde kullanılmamalıdır. Bu kuralları ihlal eden katılımcılara organizatörler uygun gördükleri durumlarda yaptırım uygulayabilirler veya bu katılımcıları <em>para iadesi olmadan</em> (eğer ücretli bir etkinlik  ise), mevcut ve yapılacak etkinliklerden ya da topluluğun kendisinden   uzaklaştırılabilirler.</p>
 
 <h2>Daha Az Kısa Versiyon</h2>
 
@@ -81,7 +81,7 @@ em {
 
 <p>Katılımcılardan sergiledikleri rahatsız edici tavırları yapmamaları istendiğinde derhal söylenene uymaları beklenmektedir.</p>
 
-<p>Sponsorlar da katılımcılar gibi rahatsızlık karşıtı önlemlere tabidirler. Sponsorlar özellikle cinsellik içeren görseller, aktiviteler ve başka materyaller kullanmamalıdırlar. Etkinliğin ev sahipleri ve katılımcılar (sponsorlar, görevliler ve gönullülerde dahil) cinselliği vurgulayan kıyafetler, üniformalar ve kostümler giymemelidirler veya başka bir şekilde cinselleştirilmiş bir ortam yaratmamalıdırlar.</p>
+<p>Sponsorlar da katılımcılar gibi rahatsızlık karşıtı önlemlere tabidirler. Sponsorlar özellikle cinsellik içeren görseller, aktiviteler ve başka materyaller kullanmamalıdırlar. Etkinliğin ev sahipleri ve katılımcılar (sponsorlar, görevliler ve gönüllüler de dahil) cinselliği vurgulayan kıyafetler, üniformalar ve kostümler giymemelidirler veya başka bir şekilde cinselleştirilmiş bir ortam yaratmamalıdırlar.</p>
 
 <p>Eğer bir katılımcı rahatsızlık veren davranışlar içinde bulunursa, organizatörler kendilerince uygun gördükleri herhangi kararı uygulayabilirler. Bu kararlara uyarı vermek veya (eğer ücretli bir etkinlikse para iadesi olmadan) etkinlikten uzaklaştırmak da dahildir.</p>
 
@@ -91,12 +91,12 @@ em {
 <p>Organizatörler bu tip durumlarda katılımcıların mekandaki güvenlik görevlilerine veya yerel güvenlik güçlerine haber vermelerine yardım etmekten, refakat etmekten ve rahatsızlığa uğrayan kişilerin etkinlik boyunca kendilerini güvenli hissetmelerine yardımcı olmaktan mutluluk duyacaklardır. Topluluğumuza  katılımınız ve katkılarınız bizim için önemlidir.
 </p>
 
-<p>Katılımcılardan tüm mesleki, sosyal yada her ikisini de içeren topluluk etkinliklerinde bu kurallara uymalarını bekliyoruz.</p>
+<p>Mesleki, sosyal veya her ikisini de içeren tüm topluluk etkinliklerinde katılımcıların bu kurallara uymalarını bekliyoruz.</p>
 
 <div class="footer">
-    <p><small><em>Orijinal kaynak: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a>, <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">The Ada Initiative</a> &amp; <a href="http://confcodeofconduct.com/">confcodeofconduct.com</a><br>
+    <p><small><em>Orijinal kaynak ve künye: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a>, <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">The Ada Initiative</a> &amp; <a href="http://confcodeofconduct.com/">confcodeofconduct.com</a><br>
 
-Çeviriye ve geliştirmeye katkıda bulunun: <a href="https://github.com/SamirTalwar/communitycodeofconduct.com">https://github.com/SamirTalwar/communitycodeofconduct.com</a><br>
+Lütfen çevirerek veya geliştirerek katkıda bulunun: <a href="https://github.com/SamirTalwar/communitycodeofconduct.com">https://github.com/SamirTalwar/communitycodeofconduct.com</a><br>
 
 Bu belge <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.tr">Creative Commons Alıntı 3.0 Yerelleştirilmemiş Lisansı</a> altında lisanslanmıştır.</em> 
 </small>
