--- a/index-tr.html
+++ b/index-tr.html
@@ -73,7 +73,7 @@ em {
 
 <h2>Kısa Versiyon</h2>
 
-<p>Topluluğumuz  cinsiyet, cinsel kimlik, cinsel tercih, yaş, engellilik hali, fiziksel görünüm, vücut ölçüleri, ırk ve din (veya dinsizlik), teknolojik tercihler ayrımı yapmaksızın herkese rahatsızlıktan uzak bir deneyim sunmaya adanmıştır. Konferans katılımcılarına herhangi bir biçimde rahatsızlık verilmesine müsamaha göstermiyoruz. Cinsel içerikli söz ve betimlemeler topluluk tarafından düzenlenen hiç bir etkinlikte, konuşmada, atölyede, partide, Twitter ve diğer sanal medya araçları da dahil hoş karşılanmaz. Bu kuralları ihlal eden katılımcılara organizatörlerin takdirine bağlı olarak ceza uygulanabilir ya da topluluğun kendisinden, etkinlik veya ileride düzenlenebilecek etkinliklerden (eğer ücretli bir etkinlik ise) <em>ücret iadesi olmaksızın</em> tamamiyle men edilebilirler.</p>
+<p>Topluluğumuz  cinsiyet, cinsel kimlik, cinsel tercih, yaş, engellilik hali, fiziksel görünüm, vücut ölçüleri, ırk ve din (veya dinsizlik), teknolojik tercihler ayrımı yapmaksızın herkese rahatsızlıktan uzak bir deneyim sunmaya adanmıştır. Konferans katılımcılarına herhangi bir biçimde rahatsızlık verilmesine müsamaha göstermiyoruz. Cinsel içerikli söz ve betimlemeler topluluk tarafından düzenlenen hiç bir etkinlikte, konuşmada, atölyede, partide, Twitter ve diğer sanal medya araçları da dahil hoş karşılanmaz. Bu kuralları ihlal eden katılımcılara organizatörlerin takdirine bağlı olarak ceza uygulanabilir ya da topluluğun kendisinden, etkinlik veya ileride düzenlenebilecek etkinliklerden (eğer ücretli bir etkinlik ise) <em>ücret iadesi olmaksızın</em> tamamıyle men edilebilirler.</p>
 
 <h2>Daha Az Kısa Versiyon</h2>
 
