Line-90 translation suggestion.

--- a/index-tr.html
+++ b/index-tr.html
@@ -87,7 +87,7 @@ em {
 
 <p>Eğer size bir rahatsızlık verilirse, başka birisine rahatsızlık verildiğine şahit olursanız veya herhangi bir endişeniz varsa lütfen en kısa zamanda bir organizatöre ulaşın. Bütün organizatörlerimizin iletişim bilgileri internet sitemizde mevcuttur.</p>
 
-<p>Organizatörler bu tip durumlarda katılımcıların mekandaki güvenlik görevlilerine veya yerel güvenlik güçlerine haber vermelerine yardım etmekten, refakat etmekten ve rahatsızlığa uğrayan kişilerin etkinlik boyunca kendilerini güvenli hissetmelerine yardımcı olmaktan mutluluk duyacaklardır. Topluluğumuza  katılımınız ve katkılarınız bizim için önemlidir.</p>
+<p>Organizatörler etkinlik boyunca katıımcıların idari güvenlik veya yerel kanun güçleri ile iletişime geçmesine yardımcı olmaktan, refakatçi sağlamaya ya da yaşanan sıkıntılarda kendilerini güvende hissetmeleri için yol göstermekten dolayı mutluluk duyacaklardır. Topluluğa katılımınıza ve katkıda bulunmanıza değer veriyoruz.</p>
 
 <p>Mesleki, sosyal veya her ikisini de içeren tüm topluluk etkinliklerinde katılımcıların bu kurallara uymalarını bekliyoruz.</p>
 
