--- a/index-tr.html
+++ b/index-tr.html
@@ -73,7 +73,7 @@ em {
 
 <h2>Kısa Versiyon</h2>
 
-<p>Topluluğumuz  cinsiyet, cinsel kimlik, cinsel tercih, yaş, engellilik hali, fiziksel görünüm, vücut ölçüleri, ırk ve din (veya dinsizlik), teknolojik tercihler ayrımı yapmaksızın herkese rahatsızlıktan uzak bir deneyim sunmaya adanmıştır. Konferans katılımcılarına herhangi bir biçimde rahatsızlık verilmesine müsamaha göstermiyoruz. Cinsel içerikli söz ve betimlemeler topluluk tarafından düzenlenen hiç bir etkinlikte, konuşmada, atölyede, partide, Twitter ve diğer sanal medya araçları da dahil hoş karşılanmaz. Bu kuralları ihlal eden katılımcılara organizatörlerin takdirine bağlı olarak ceza uygulanabilir ya da topluluğun kendisinden, etkinlik veya ileride düzenlenebilecek etkinliklerden (eğer ücretli bir etkinlik ise) <em>ücret iadesi olmaksızın</em> tamamıyla men edilebilirler.</p>
+<p>Topluluğumuz  cinsiyet, cinsel kimlik, cinsel tercih, yaş, engellilik hali, fiziksel görünüm, vücut ölçüleri, ırk ve din (veya dinsizlik), teknolojik tercihler ayrımı yapmaksızın herkese rahatsızlıktan uzak bir deneyim sunmaya adanmıştır. Konferans katılımcılarına herhangi bir biçimde rahatsızlık verilmesine müsamaha göstermiyoruz. Cinsel içerikli konuşma ve görüntüler konuşmalar, atölyeler, partiler, Twitter ve diğer sanal medya da dahil olmak üzere herhangi bir topluluk etkinliğinde kullanılmamalıdır. Bu kuralları ihlal eden katılımcılara organizatörler uygun gördükleri durumlarda yaptırım uygulayabilirler veya bu katılımcıları <em>para iadesi olmadan</em> (eğer ücretli bir etkinlik  ise), mevcut ve yapılacak etkinliklerden ya da topluluğun kendisinden   uzaklaştırılabilirler.</p>
 
 <h2>Daha Az Kısa Versiyon</h2>
 
@@ -85,9 +85,11 @@ em {
 
 <p>Eğer bir katılımcı rahatsızlık veren davranışlar içinde bulunursa, organizatörler kendilerince uygun gördükleri herhangi kararı uygulayabilirler. Bu kararlara uyarı vermek veya (eğer ücretli bir etkinlikse para iadesi olmadan) etkinlikten uzaklaştırmak da dahildir.</p>
 
-<p>Eğer size bir rahatsızlık verilirse, başka birisine rahatsızlık verildiğine şahit olursanız veya herhangi bir endişeniz varsa lütfen en kısa zamanda bir organizatöre ulaşın. Bütün organizatörlerimizin iletişim bilgileri internet sitemizde mevcuttur.</p>
+<p>Eğer size bir rahatsızlık verilirse, başka birisine rahatsızlık verildiğine şahit olursanız veya herhangi bir endişeniz varsa lütfen en kısa zamanda bir organizatöre ulaşın. Bütün organizatörlerimizin iletişim bilgileri internet sitemizde mevcuttur.
+</p>
 
-<p>Organizatörler etkinlik boyunca katıımcıların mekanın idari güvenlik birimi veya yerel kanun güçleri ile iletişime geçmesine yardımcı olmaktan, refakatçı sağlamak ya da yaşanabilecek sıkıntılarda kendilerini güvende hissetmeleri için yol gösterici olmaktan dolayı mutluluk duyacaklardır. Topluluğa katılımanıza ve katkıda bulunmanıza değer veriyoruz.</p>
+<p>Organizatörler bu tip durumlarda katılımcıların mekandaki güvenlik görevlilerine veya yerel güvenlik güçlerine haber vermelerine yardım etmekten, refakat etmekten ve rahatsızlığa uğrayan kişilerin etkinlik boyunca kendilerini güvenli hissetmelerine yardımcı olmaktan mutluluk duyacaklardır. Topluluğumuza  katılımınız ve katkılarınız bizim için önemlidir.
+</p>
 
 <p>Mesleki, sosyal veya her ikisini de içeren tüm topluluk etkinliklerinde katılımcıların bu kurallara uymalarını bekliyoruz.</p>
 
