Applied @mavelezserna suggestion:
I'd suggest "No toleramos ningún tipo de acoso..." Rather than "No toleramos el acoso (...) cualquiera que sea su forma"

--- a/index-es.html
+++ b/index-es.html
@@ -73,7 +73,7 @@ em {
 
 <h2>La versi&oacute;n corta</h2>
 
-<p>Nuestra comunidad est&aacute; dedicada a proporcionar una experiencia libre de acoso para todos, independientemente del g&eacute;nero, de la identidad y la expresi&oacute;n de g&eacute;nero, edad, orientaci&oacute;n sexual, discapacidad, apariencia f&iacute;sica, tama&ntilde;o corporal, raza, etnia, religi&oacute;n (o falta de ella), o preferencias tecnol&oacute;gicas. No toleramos el acoso a miembros de la comunidad cualquiera que sea su forma. El lenguaje y las met&aacute;foras sexuales no son apropiados en ning&uacute;n evento de la comunidad, incluyendo ponencias, talleres, fiestas, Twitter y otros medios online. Los participantes que violen estas reglas pueden ser sancionados o expulsados del evento y de cualquier evento futuro <em>sin un reembolso</em> (si aplica), o de la propia comunidad, a discreci&oacute;n de los organizadores.</p>
+<p>Nuestra comunidad est&aacute; dedicada a proporcionar una experiencia libre de acoso para todos, independientemente del g&eacute;nero, de la identidad y la expresi&oacute;n de g&eacute;nero, edad, orientaci&oacute;n sexual, discapacidad, apariencia f&iacute;sica, tama&ntilde;o corporal, raza, etnia, religi&oacute;n (o falta de ella), o preferencias tecnol&oacute;gicas. No toleramos ning&uacute;n tipo de acoso. El lenguaje y las met&aacute;foras sexuales no son apropiados en ning&uacute;n evento de la comunidad, incluyendo ponencias, talleres, fiestas, Twitter y otros medios online. Los participantes que violen estas reglas pueden ser sancionados o expulsados del evento y de cualquier evento futuro <em>sin un reembolso</em> (si aplica), o de la propia comunidad, a discreci&oacute;n de los organizadores.</p>
 
 <h2>La versi&oacute;n menos corta</h2>
 
