Applied @mavelezserna suggestion:
"contacta con un(a) organizador(a)" should be either "ponte en contacto con..," o "contacta a..."

--- a/index-es.html
+++ b/index-es.html
@@ -85,9 +85,9 @@ em {
 
 <p>Si un participante emplea un comportamiento hostigador, los organizadores pueden tomar cualquier medida que estimen oportuna, incluyendo la amonestaci&oacute;n o expulsi&oacute;n del ofensor del evento o de la comunidad sin un reembolso.</p>
 
-<p>Si est&aacute;s siendo acosado, percibes que alguien est&aacute; siendo acosado, o tienes cualquier otra preocupaci&oacute;n, por favor contacta con un organizador inmediatamente. Todos los datos de contacto de nuestros organizadores se pueden encontrar en nuestra web.</p>
+<p>Si est&aacute;s siendo acosado, percibes que alguien est&aacute; siendo acosado, o tienes cualquier otra preocupaci&oacute;n, por favor ponte en contacto con un organizador inmediatamente. Todos los datos de contacto de nuestros organizadores se pueden encontrar en nuestra web.</p>
 
-<p>Los organizadores estar&aacute;n encantados de ayudar a los participantes a contactar con la seguridad del lugar del encuentro o con las fuerzas del orden locales, proveer de acompa&ntilde;amiento o asistir de otra manera a aquellos que est&eacute;n siendo acosados para que se sientan seguros durante el transcurso del evento. Valoramos tu presencia y contribuciones a la comunidad.</p>
+<p>Los organizadores estar&aacute;n encantados de ayudar a los participantes a ponerse en contacto con la seguridad del lugar del encuentro o con las fuerzas del orden locales, proveer de acompa&ntilde;amiento o asistir de otra manera a aquellos que est&eacute;n siendo acosados para que se sientan seguros durante el transcurso del evento. Valoramos tu presencia y contribuciones a la comunidad.</p>
 
 <p>Esperamos que todos los participantes cumplan estas reglas en todos los eventos de la comunidad, ya sea profesional, social o una mezcla de ambos.</p>
 
