Fixed typo noted by @islomar:
"no deberán" instead of "no deberá"

--- a/index-es.html
+++ b/index-es.html
@@ -81,7 +81,7 @@ em {
 
 <p>Se espera que aquellos participantes a los que se les solicite cesar cualquier tipo de acoso lo hagan de manera inmediata.</p>
 
-<p>Los esp&oacute;nsors tambi&eacute;n est&aacute; sujetos a la pol&iacute;tica anti acoso. En particular, los esp&oacute;nsors no deber&aacute; utilizar im&aacute;genes, movimientos u otro material sexualizado. Los anfitriones y asistentes, incluyendo a los esp&oacute;nsors, empleados y voluntarios, no deber&aacute;n utilizar ropa/uniformes/disfraces sexualizados o crear un ambiente sexualizado de cualquier otra manera.</p>
+<p>Los esp&oacute;nsors tambi&eacute;n est&aacute; sujetos a la pol&iacute;tica anti acoso. En particular, los esp&oacute;nsors no deber&aacute;n utilizar im&aacute;genes, movimientos u otro material sexualizado. Los anfitriones y asistentes, incluyendo a los esp&oacute;nsors, empleados y voluntarios, no deber&aacute;n utilizar ropa/uniformes/disfraces sexualizados o crear un ambiente sexualizado de cualquier otra manera.</p>
 
 <p>Si un participante emplea un comportamiento hostigador, los organizadores pueden tomar cualquier medida que estimen oportuna, incluyendo la amonestaci&oacute;n o expulsi&oacute;n del ofensor del evento o de la comunidad sin un reembolso.</p>
 
