Some typos and grammar corrections

--- a/public/index-pl.html
+++ b/public/index-pl.html
@@ -71,7 +71,7 @@ em {
 
 <p>Nasze dane kontaktowe znajdują się na stronie internetowej spotkań lub w wysłanych wcześniej mailach.</p>
 
-<h2>Wersja szybka</h2>
+<h2>Wersja krótsza</h2>
 
 <p>Nasza społeczność pragnie tworzyć dostępną dla wszystkich przestrzeń i społeczność, wolną od nękania, niezależnie od płci, wieku, orientacji seksualnej, niepełnosprawności, aparycji, wielkości ciała, rasy, wierzeń (bądź ich braku) oraz wyborów technologicznych. Nie tolerujemy molestowania uczestników konferencji w żadnej formie. Seksistowski język jest nieodpowiedni niezależne od miejsca: spotkań, prezentacji, warsztatów, imprezy bądź jakiegokolwiek miejsca związanego ze społecznością (także w Internecie). Osoby nieprzestrzegające tych zasad będą (za zgodą organizatorów) ukarani lub usunięci ze społeczności, spotkania oraz ze wszystkich przyszłych spotkań, <em>bez zwrotu kosztów</em>. 
 
@@ -79,7 +79,7 @@ em {
 
 <p>Nękanie obejmuje obraźliwe komentarze nawiązujące do płci, orientacji seksualnej, wieku, niepełnosprawności, aparycji, wielkości ciała, rasy, religii, wyborów technologicznych, obsceniczne obrazy w miejscach publicznych, celowe zastraszanie, prześladowanie, śledzenie, nękające zdjęcia lub nagrania, ciągłe zakłócanie wykładów lub innych wydarzeń, niestosowny kontakt fizyczny oraz molestowanie seksualne.</p>
 
-<p>Osoby uczestniczące w społeczności poproszeni o zaprzestanie nieodpowiedniego zachowania, zobowiązani są do natychmiastowego podporządkowania się zasadom.</p>
+<p>Osoby uczestniczące w społeczności proszone o zaprzestanie nieodpowiedniego zachowania, zobowiązane są do natychmiastowego podporządkowania się zasadom.</p>
 
 <p>Zasady odnoszące się do nękania obowiązują wszystkich, włączając w to sponsorów. Sponsorzy w szczególności nie powinni wykorzystywać zdjęć, promować działań oraz wykorzystywać jakichkolwiek materiałów o seksualnych podtekstach. Organizatorzy, uczestnicy, sponsorzy oraz obsługa (włączając w to wolontariuszki i wolontariuszy) nie powinna wyglądać wyzywająco (co odnosi się przede wszystkim do ubrań, strojów lub kostiumów) ani w jakikolwiek inny sposób tworzyć środowiska o seksualnym nacechowaniu.</p>
 
@@ -87,7 +87,7 @@ em {
 
 <p>Jeżeli nękanie dotyczy Ciebie lub zauważasz przejawy takiego zachowania w stosunku do innych osób, lub masz jakiekolwiek inne obawy, skontaktuj się bezzwłocznie z organizatorami. Kontakt do organizatorów znajduje się na stronie internetowej spotkań lub w wysłanych wcześniej mailach.</p>
 
-<p>Organizatorzy chętnie pomogą uczestniczką i uczestnikom skontaktować się z ochroną lub służbami porządkowymi, zapewnić eskortę lub w jakikolwiek innym sposób towarzyszyć osobom nękanym osobom, aby czuły się bezpiecznie podczas trwania spotkania. Cenimy Twoje uczestnictwo.</p>
+<p>Organizatorzy chętnie pomogą uczestniczkom i uczestnikom skontaktować się z ochroną lub służbami porządkowymi, zapewnić eskortę lub w jakikolwiek innym sposób towarzyszyć osobom nękanym osobom, aby czuły się bezpiecznie podczas trwania spotkania. Cenimy Twoje uczestnictwo.</p>
 
 <p>Oczekujemy od uczestników przestrzegania tych zasad podczas wszelkich wydarzeń związanych z naszą społecznością.</p>
 
