Making the CoC less binary (women and men)
More general form than only women and men.

--- a/public/index-pl.html
+++ b/public/index-pl.html
@@ -65,7 +65,7 @@ em {
 <body>
 <h1>Kodeks postępowania</h1>
 
-<p>Wszystkie uczestniczki i wszyscy uczestnicy naszej grupy zobowiązani są do zaakceptowania oraz przestrzegania niniejszego kodeksu postępowania; zawsze - w trakcie spotkań, jak i pomiędzy nimi. Jako organizatorzy, oczekujemy współpracy podczas wdrażania zasad niniejszego kodeksu, aby zapewnić otoczenie w którym wszyscy będziemy czuli się bezpiecznie.</p>
+<p>Wszystkie osoby uczestniczące w naszej grupy zobowiązani są do zaakceptowania oraz przestrzegania niniejszego kodeksu postępowania; zawsze - w trakcie spotkań, jak i pomiędzy nimi. Jako organizatorzy, oczekujemy współpracy podczas wdrażania zasad niniejszego kodeksu, aby zapewnić otoczenie w którym wszyscy będziemy czuli się bezpiecznie.</p>
 
 <h2>Potrzebujesz pomocy?</h2>
 
@@ -87,7 +87,7 @@ em {
 
 <p>Jeżeli nękanie dotyczy Ciebie lub zauważasz przejawy takiego zachowania w stosunku do innych osób, lub masz jakiekolwiek inne obawy, skontaktuj się bezzwłocznie z organizatorami. Kontakt do organizatorów znajduje się na stronie internetowej spotkań lub w wysłanych wcześniej mailach.</p>
 
-<p>Organizatorzy chętnie pomogą uczestniczkom i uczestnikom skontaktować się z ochroną lub służbami porządkowymi, zapewnić eskortę lub w jakikolwiek innym sposób towarzyszyć osobom nękanym osobom, aby czuły się bezpiecznie podczas trwania spotkania. Cenimy Twoje uczestnictwo.</p>
+<p>Organizatorzy chętnie pomogą osobom uczestniczącym skontaktować się z ochroną lub służbami porządkowymi, zapewnić eskortę lub w jakikolwiek innym sposób towarzyszyć osobom nękanym osobom, aby czuły się bezpiecznie podczas trwania spotkania. Cenimy Twoje uczestnictwo.</p>
 
 <p>Oczekujemy od uczestników przestrzegania tych zasad podczas wszelkich wydarzeń związanych z naszą społecznością.</p>
 
