--- a/public/index-pl.html
+++ b/public/index-pl.html
@@ -87,7 +87,7 @@ em {
 
 <p>Jeżeli nękanie dotyczy Ciebie lub zauważasz przejawy takiego zachowania w stosunku do innych osób, lub masz jakiekolwiek inne obawy, skontaktuj się bezzwłocznie z organizatorami. Kontakt do organizatorów znajduje się na stronie internetowej spotkania lub w wysłanych wcześniej mailach.</p>
 
-<p>Organizatorzy chętnie pomogą osobom nękanym skontaktować się z ochroną lub służbami porządkowymi, zapewnią eskortę lub w jakikolwiek innym sposób będą im towarzyszyć osobom nękanym, aby czuły się bezpiecznie podczas trwania spotkania. Cenimy Twoje uczestnictwo.</p>
+<p>Organizatorzy chętnie pomogą osobom nękanym skontaktować się z ochroną lub służbami porządkowymi, zapewnią eskortę lub w jakikolwiek innym sposób będą im towarzyszyć, aby czuły się bezpiecznie podczas trwania spotkania. Cenimy Twoje uczestnictwo.</p>
 
 <p>Oczekujemy od uczestników przestrzegania tych zasad podczas wszelkich wydarzeń związanych z naszą społecznością.</p>
 
