rewording of polish coc
The CoC was finally read by smb who values polish over any other (programming) language ;)
Kudos to [Kasia Leszczyńska](https://twitter.com/k_leszczynska) from @softwaremill who actually rewrote the whole thing to proper polish.

--- a/public/index-pl.html
+++ b/public/index-pl.html
@@ -65,7 +65,9 @@ em {
 <body>
 <h1>Kodeks postępowania</h1>
 
-<p>Wszystkie osoby uczestniczące w naszej grupy zobowiązane są do zaakceptowania oraz przestrzegania niniejszego kodeksu postępowania; zawsze - w trakcie spotkań, jak i pomiędzy nimi. Jako organizatorzy, oczekujemy współpracy podczas wdrażania zasad niniejszego kodeksu, aby zapewnić otoczenie, w którym wszyscy będziemy czuli się bezpiecznie.</p>
+<p>Cenimy Ciebie i każdą osobę, która chce wziąć udział w naszym wydarzeniu lub dołączyć do społeczności. Jako organizatorzy pragniemy stworzyć warunki i otoczenie do swobodnej i komfortowej wymiany wiedzy i doświadczeń. Niniejszy kodeks ma zapewnić tę bezpieczną przestrzeń.</p>
+
+<p>Dołączając do nas, akceptujesz oraz przestrzegasz wypracowanych zasad. Stajesz się ich ambasadorem zarówno podczas wydarzeń jak i pomiędzy nimi. Jeśli masz uwagi lub pomysły na usprawnienie kodeksu, zgłoś się do organizatorów /administratorów, którzy chętnie wysłuchają konstruktywnych komentarzy.</p>
 
 <h2>Potrzebujesz pomocy?</h2>
 
@@ -73,21 +75,21 @@ em {
 
 <h2>Wersja krótsza</h2>
 
-<p>Nasza społeczność pragnie tworzyć dostępną dla wszystkich, wolną od nękania przestrzeń. Przestrzeń niezależną od płci, wieku, orientacji seksualnej, niepełnosprawności, aparycji, wielkości ciała, rasy, wierzeń (bądź ich braku) oraz wyborów technologicznych. Nie tolerujemy molestowania uczestników społeczności w żadnej formie. Seksistowski język jest nieodpowiedni niezależne od sytuacji: podczas spotkań, prezentacji, warsztatów, imprez bądź jakiegokolwiek miejsca związanego ze naszą społecznością (dotyczy to także w Internecie). Osoby nieprzestrzegające tych zasad będą (za zgodą organizatorów) ukarani lub usunięci ze społeczności, spotkania oraz ze wszystkich przyszłych spotkań, <em>bez zwrotu kosztów</em>. 
+<p>Nasza społeczność pragnie być dostępną i komfortową dla wszystkich, wolną od agresji pod wszelką postacią. W założeniu wspólnie stworzona przestrzeń jest niezależna od płci, wieku, orientacji seksualnej, niepełnosprawności, aparycji, wielkości ciała, rasy, wierzeń (bądź ich braku) oraz wyborów technologicznych. Nie tolerujemy zachowań agresywnych, naruszających godność osobistą i sprzecznych z normami społecznymi typu seksizm, język nienawiści, molestowanie czy napastowanie. Wymienione działania dotyczą każdego uczestnika, partnera i sponsora wydarzenia, niezależnie od miejsca i sytuacji: podczas spotkań, prezentacji, warsztatów, imprez, oraz w internecie, środkach masowego przekazu i mediach społecznościowych. Osoby łamiące zasady, będą (za zgodą organizatorów) pociągane do odpowiedzialności. Organizatorzy zastrzegają sobie prawo do wydalenia takich członków ze społeczności <em>bez zwrotu kosztów</em> i <em>z „wilczym biletem”</em> na przyszłe wydarzenia. </p> 
 
 <h2>Wersja dłuższa</h2>
 
-<p>Nękanie obejmuje obraźliwe komentarze nawiązujące do płci, orientacji seksualnej, wieku, niepełnosprawności, aparycji, wielkości ciała, rasy, religii, wyborów technologicznych, obsceniczne obrazy w miejscach publicznych, celowe zastraszanie, prześladowanie, śledzenie, nękające zdjęcia lub nagrania, ciągłe zakłócanie wykładów lub innych wydarzeń, niestosowny kontakt fizyczny oraz molestowanie seksualne.</p>
+<p>Łamanie zasad obejmuje obraźliwe komentarze, działania, materiały audio i video oraz materiały promocyjne (w tym strój/kostium i gadżety), nawiązujące do płci, orientacji seksualnej, wieku, niepełnosprawności, aparycji, wielkości ciała, rasy, religii, wyborów technologicznych, obsceniczne obrazy w miejscach publicznych, celowe zastraszanie, prześladowanie, śledzenie, nękające zdjęcia lub nagrania, ciągłe zakłócanie wykładów lub innych wydarzeń, niestosowny kontakt fizyczny oraz o podtekście seksualnym, molestowanie.</p>
+
+<p>Zasady odnoszące się do nękania obowiązują wszystkich: osoby uczestniczące, wolontariuszy, partnerów i sponsorów wydarzenia / społeczności. Każdy uczestnik dołączając do wydarzenia staje się ambasadorem niniejszego kodeksu i zobowiązuje się przestrzegać jego zasad. </p>
 
 <p>Osoby uczestniczące w społeczności poproszone o zaprzestanie nieodpowiedniego zachowania, zobowiązane są do natychmiastowego podporządkowania się zasadom.</p>
 
-<p>Zasady odnoszące się do nękania obowiązują wszystkich, włączając w to sponsorów. Sponsorzy w szczególności nie powinni wykorzystywać zdjęć, promować działań oraz wykorzystywać jakichkolwiek materiałów o seksualnych podtekstach. Organizatorzy, uczestnicy, sponsorzy oraz obsługa (włączając w to wolontariuszki i wolontariuszy) nie powinna wyglądać wyzywająco (co odnosi się przede wszystkim do ubrań, strojów lub kostiumów) ani w jakikolwiek inny sposób tworzyć środowiska o seksualnym nacechowaniu.</p>
+<p>W stosunku do osób łamiących zasady organizatorzy mają prawo podjąć działania, które uznają za stosowne, włączając w to wydalenie nękającej osoby ze społeczności, <em>wydarzenia oraz ze wszystkich przyszłych spotkań, bez zwrotu kosztów</em>.</p>
 
-<p>W sytuacji, gdy osoba uczestnicząca w społeczności zachowuje się w sposób nieodpowiedni, opisany powyżej, organizatorzy mają prawo podjąć działania, które uznają za stosowne, włączając w to ostrzeżenie lub wydalenie nękającej osoby ze społeczności, spotkania oraz ze wszystkich przyszłych spotkań, <em>bez zwrotu kosztów</em>.</p>
+<p>Jeżeli zachowanie agresywne, molestowanie czy nękanie dotyczy Ciebie lub zauważasz przejawy takiego zachowania w stosunku do innych osób, lub masz jakiekolwiek inne obawy, skontaktuj się bezzwłocznie z organizatorami. Kontakt do organizatorów znajduje się na stronie internetowej spotkania lub w wysłanych wcześniej mailach.</p>
 
-<p>Jeżeli nękanie dotyczy Ciebie lub zauważasz przejawy takiego zachowania w stosunku do innych osób, lub masz jakiekolwiek inne obawy, skontaktuj się bezzwłocznie z organizatorami. Kontakt do organizatorów znajduje się na stronie internetowej spotkania lub w wysłanych wcześniej mailach.</p>
-
-<p>Organizatorzy chętnie pomogą osobom nękanym skontaktować się z ochroną lub służbami porządkowymi, zapewnią eskortę lub w jakikolwiek innym sposób będą im towarzyszyć, aby czuły się bezpiecznie podczas trwania spotkania. Cenimy Twoje uczestnictwo.</p>
+<p>Organizatorzy chętnie pomogą osobom nękanym skontaktować się z ochroną lub służbami porządkowymi, zapewnią wsparcie, aby czuły się bezpiecznie podczas trwania spotkania. </p>
 
 <p>Oczekujemy od uczestników przestrzegania tych zasad podczas wszelkich wydarzeń związanych z naszą społecznością.</p>
 
